[package]
name = "rgb-demo-explorer"
version = "0.2.0"
edition = "2021"

[dependencies]
rgb-std = "=0.11.0-beta.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
